Apply ClusterRole read-pods for all service accounts

--- a/kubernetes-security/task02/04-clusterrolebinding-pod-reader.yaml
+++ b/kubernetes-security/task02/04-clusterrolebinding-pod-reader.yaml
@@ -7,9 +7,6 @@ roleRef:
   name: pod-reader
   apiGroup: rbac.authorization.k8s.io
 subjects:
-#  - kind: Group
-#    name: system:serviceaccounts:prometheus
-#    apiGroup: rbac.authorization.k8s.io
-- kind: ServiceAccount
-  name: carol
-  namespace: prometheus
+  - kind: Group
+    name: system:serviceaccounts:prometheus
+    apiGroup: rbac.authorization.k8s.io
